--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,6 @@ h1, h2 {
     padding-top: 30px;
     width: 33%;
     margin: 0 auto;
-    background-color: green;
 }
 
 hr {
@@ -167,10 +166,25 @@ hr {
     text-align: right;
 }
 
-.left-about-heading h2 {
-    text-align: left;
+#welcome {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 180%;
 }
 
-.left-about-heading p {
-    text-align: left;
+#circle-container {
+    width: 300px;
+    height: 300px;
+    padding: 30px;
+    border-style: solid;
+    border-color: #ccc;
+    border-width: 1px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+#circle-cover-bg {
+    background: url('../css/images/ethos-center-image.jpg') no-repeat center center;
+    height: 100%;
+    border-radius: 50%;
 }
