--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,7 +184,18 @@ hr {
 }
 
 #circle-cover-bg {
-    background: url('..images/ethos-center-image.jpg') no-repeat center center;
+    background: url('../css/images/ethos-center-image.jpg') no-repeat center center;
     height: 100%;
     border-radius: 50%;
+}
+
+/* event times */
+
+#times {
+background-image: url('../css/images/times-background.webp');
+background-repeat: no-repeat;
+background-size: cover;
+background-position: center;
+width: 100%;
+overflow: hidden;
 }
