--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,3 +294,27 @@ hr {
 
     }
 }
+
+#cover-text {
+    left: 0;
+}
+
+#club-ethos {
+    width: 90%;
+    height: 1200px;
+    margin: 0 auto;
+}
+
+.left-about-heading, .right-about-heading {
+    width: inherit;   
+}
+
+.left-about-heading h2, .right-about-heading h2 {
+    width: 100%;
+    text-align: center;
+}
+
+.left-about-heading p, .right-about-heading p {
+    padding: 0 20px;
+    text-align: center;
+}
