Style the meetup times for tablet and mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -276,6 +276,13 @@ footer {
     padding: 0;
 }
 
+#times > div {
+    width: 100%;
+    clear:both;
+    height: 150px;
+    padding: 0;
+}
+
 hr {
     display: none;
 }
@@ -318,3 +325,4 @@ hr {
     padding: 0 20px;
     text-align: center;
 }
+
