Style gallery for responsive design

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,3 +326,13 @@ hr {
     text-align: center;
 }
 
+#photos {
+    column-count: 3;
+}
+
+@media screen and (max-width: 800px) {
+   #photos {
+    column-count: 2;
+   } 
+}
+
