--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ h1, h2 {
 #hero-image {
     height: 600px;
     width: 100%;
-    background: url('../css/images/hero-image.webp') no-repeat center center ;
+    background: url('../images/hero-image.webp') no-repeat center center ;
 
     /* animates zoom effect on loading page */
     animation-name: hero-zoom;
@@ -184,7 +184,7 @@ hr {
 }
 
 #circle-cover-bg {
-    background: url('../css/images/ethos-center-image.jpg') no-repeat center center;
+    background: url('../images/ethos-center-image.jpg') no-repeat center center;
     height: 100%;
     border-radius: 50%;
 }
@@ -192,7 +192,7 @@ hr {
 /* event times */
 
 #times {
-background-image: url('../css/images/times-background.webp');
+background-image: url('../images/times-background.webp');
 background-repeat: no-repeat;
 background-size: cover;
 background-position: center;
@@ -278,7 +278,7 @@ footer {
 
 #times > div {
     width: 100%;
-    clear:both;
+    clear: both;
     height: 150px;
     padding: 0;
 }
